--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6 col-lg-3 p-0 mt-2">
-						<a href="#logos" @click="showlogos=true">
+						<a href="javascript:void(0);" @click="showlogos=true">
 							<div class="card m-1 " style="height:100%;">
 								<img class="rounded card-img-top" style="width:100%; height:12rem;" src="http://wx3.sinaimg.cn/large/0060lm7Tly1fy79xuw0loj30ap06e0t9.jpg"
 								 alt="Card image cap">
