--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="msvalidate.01" content="2B6B31C1DDB6F3F7C66322DCD32A2848" />
-	<title>英国买房就上 MaiFang.UK</title>
+	<title>全英国房产投资地图</title>
 	<!--link rel="stylesheet/less" type="text/css" href="styles.less"-->
 	<link href="https://cdn.staticfile.org/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="https://cdn.staticfile.org/animate.css/3.7.0/animate.min.css" rel="stylesheet" />
@@ -39,7 +39,7 @@
 	<div id="app">
 		<div v-if='panel=="front"' id="标题栏" class="d-flex flex-wrap justify-content-around " style="height:30vh; background:url('http://wx4.sinaimg.cn/large/0060lm7Tly1fy58bry93mj31a80m7wlq.jpg')  center center; background-size: cover; ">
 			<div class="my-auto mr-auto animated fadeInRight delay-1s" style="background-color: rgba(0, 0, 0, 0.6)">
-				<span class="text-light " style="font-size:  7vh;">英图网-英国房产投资地图</span>
+				<span class="text-light " style="font-size:  7vh;">全英国房产投资地图</span>
 			</div>
 		</div>
 		<nav id="导航条" class="navbar navbar-expand-lg navbar-dark sticky-top p-1" style="background:rgba(0, 0, 0, 0.8);">
@@ -82,7 +82,7 @@
 							<img class="rounded card-img-top" style="width:100%; height:12rem;" src="https://tse4.mm.bing.net/th?id=OIP.JtnzacjFxNWGmNDTX11msgHaE9&pid=Api&w=1270&h=850&rs=1&p=0"
 							 alt="Card image cap">
 							<div class="card-img-overlay p-1">
-								<h3 class="card-title borderTxt">每小时更新全英房源</h3>
+								<h3 class="card-title borderTxt">每小时更新全英国房源</h3>
 							</div>
 							<div class="card-body text-muted  p-3">
 								<p class="card-text">好房不等人<br>
