--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="msvalidate.01" content="2B6B31C1DDB6F3F7C66322DCD32A2848" />
-	<title>全英国房产投资地图</title>
+	<title>英国买房地图</title>
 	<!--link rel="stylesheet/less" type="text/css" href="styles.less"-->
 	<link href="https://cdn.staticfile.org/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="https://cdn.staticfile.org/animate.css/3.7.0/animate.min.css" rel="stylesheet" />
@@ -87,7 +87,7 @@
 								</div>
 								<div class="card-body text-muted  p-3">
 									<p class="card-text">好房不等人<br>
-										中科剑桥海外投资集团联合英国房地产协会独家提供每小时更新的英国主要城市全部在售房产信息</p>
+										剑桥海外投资集团联合英国房地产协会独家提供每小时更新的英国主要城市全部在售房产信息</p>
 
 								</div>
 							</div>
@@ -201,9 +201,7 @@
 			</div>
 		</div>
 		<div v-if='panel=="front"' class="container text-muted border-top">
-			<p class="py-5"> 12月12日伦敦新登记房产出售490套 <br />
-				12月12日曼彻斯特新登记房产出售490套<br />
-				12月12日利物浦更新住宅出售登记490项</p>
+		
 		</div>
 		<div id="地图" v-if="panel=='map'">
 			<nav class="nav fixed-bottom m-5">
@@ -315,8 +313,11 @@
 										</td>
 										<td>
 											<div class="btn-group btn-group-toggle" data-toggle="buttons">
+													<button class="btn btn-outline-secondary" @click="deleteFilter('beds')">
+															<input type="radio" name="发布" id="option2"> 全部
+														</button>
 												<button class="btn btn-outline-secondary" @click="setFilter('beds',0)">
-													<input type="radio" name="卧室数" id="option1"> 无
+													<input type="radio" name="卧室数" id="option1"> 0间
 												</button>
 												<button class="btn btn-outline-secondary" @click="setFilter('beds',1)">
 													<input type="radio" name="卧室数" id="option2"> 1间
@@ -331,7 +332,7 @@
 													<input type="radio" name="卧室数" id="option2"> 4间
 												</button>
 												<button class="btn btn-outline-secondary" @click="setFilter('beds',5)">
-													<input type="radio" name="卧室数" id="option2"> 4间以上
+													<input type="radio" name="卧室数" id="option2"> 5间及以上
 												</button>
 											</div>
 										</td>
@@ -397,7 +398,7 @@
 						<td class="text-muted pl-2">
 							<h5>{{nickname}}&nbsp;&nbsp;<span style="font-size: .5rem">首席投资顾问</span> </h5>
 							<p class="border-top">
-								中科剑桥海外投资基金联合创始人<br />
+								剑桥海外投资基金联合创始人<br />
 								英国剑桥大学MBA<br />
 								注册会计师 注册金融分析师 经济学博士<br />
 								英国经济学人集团宏观经济研究顾问
@@ -410,7 +411,7 @@
 
 			</div>
 			<div id="集团介绍" class="my-auto mx-3 text-muted ">
-				<h5>中科剑桥海外地产投资集团</h5>
+				<h5>剑桥海外地产投资集团</h5>
 				<p class="border-top">
 					由剑桥大学商学院和牛津大学商学院中国校友会联合多位英国华人精英共同创立.<br />
 					英国房地产协会中国唯一合作伙伴.<br />
@@ -859,7 +860,7 @@
 						loc = new Microsoft.Maps.Location(lo.lat, lo.lng);
 						pushpin = new Microsoft.Maps.Pushpin(loc, {
 							color: lo.newCome ? "red" : "blue",
-							text: lo.beds.toString(),
+							text: lo.beds.toString()+(lo.beds > 4 ? '+' : ''),
 							title: "£" + lo.price.toLocaleString()
 						});
 						map.entities.push(pushpin);
@@ -880,9 +881,8 @@
 									lo.id / 89 +
 									'/00.jpg"/></a>' +
 									lo.beds + (lo.beds > 4 ? '+' : '') +
-									"卧室, 半独立别墅<br>资料更新日期2018-12-12" +
-									tenure +
-									"<br></div>",
+									"卧室,"+(lo.flat?"公寓":"别墅")+(lo.freehold?"永久产权":"非永久产权")+"<br>资料更新日期" +lo.date+									
+									"</div>",
 								visible: true,
 								maxHeight: 500,
 								maxWidth: 500
