--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 	<meta name="msvalidate.01" content="2B6B31C1DDB6F3F7C66322DCD32A2848" />
-	<title>英国买房地图</title>
+	<title>英国房产大全</title>
 	<!--link rel="stylesheet/less" type="text/css" href="styles.less"-->
 	<link href="https://cdn.staticfile.org/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="https://cdn.staticfile.org/animate.css/3.7.0/animate.min.css" rel="stylesheet" />
@@ -39,7 +39,7 @@
 	<div id="app">
 		<div v-if='panel=="front"' id="标题栏" class="d-flex flex-wrap justify-content-around " style="height:30vh; background:url('http://wx4.sinaimg.cn/large/0060lm7Tly1fy58bry93mj31a80m7wlq.jpg')  center center; background-size: cover; ">
 			<div class="my-auto mr-auto animated fadeInRight delay-1s" style="background-color: rgba(0, 0, 0, 0.6)">
-				<span class="text-light " style="font-size:  7vh;">全英房产投资地图</span>
+				<span class="text-light " style="font-size:  7vh;">英国房产大全</span>
 			</div>
 		</div>
 		<nav id="导航条" class="navbar navbar-expand-lg navbar-dark sticky-top p-1" style="background:rgba(0, 0, 0, 0.8);">
@@ -53,7 +53,7 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav w-100 d-flex justify-content-around">
 						<li class="nav-item active">
-							<a class="nav-link" href="?mode=map" @click="panel=&quot;list&quot;"><img src="https://i.loli.net/2018/12/15/5c143ffc7bbb7.png" />互动地图</a>
+							<a class="nav-link" href="?mode=map" @click="panel=&quot;list&quot;"><img src="https://i.loli.net/2018/12/15/5c143ffc7bbb7.png" />购房地图</a>
 						</li>
 						<li class="nav-item dropdown active">
 							<a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
@@ -201,13 +201,12 @@
 			</div>
 		</div>
 		<div v-if='panel=="front"' class="container text-muted border-top">
-		
+
 		</div>
 		<div id="地图" v-if="panel=='map'">
 			<nav class="nav fixed-bottom m-5">
 				<button class="btn btn-success py-0 px-2" style="z-index:-1;font-size: 2rem;" data-toggle="modal" data-target="#mapModal">
 					使用说明
-
 				</button>
 			</nav>
 
@@ -223,122 +222,125 @@
 							</button>
 						</div>
 						<div class="modal-body">
-							<p>本地图展示伦敦地区最近7天内发布的出售中房源信息</p>
 							<p>
-								<p>红色表示首次发布的项目。蓝色表示刚刚降价的项目。圆圈中的数字表示此处房产中的卧室数</p>
-								<table>
-									<tr>
-										<td>
-											城市
-										</td>
-										<td>
-											<div class="btn-group btn-group-toggle" data-toggle="buttons">
-												<button class="btn btn-outline-secondary" active>
-													<input type="radio" name="城市" id="option1" checked> 伦敦
-												</button>
-												<button class="btn btn-outline-secondary">
-													<input type="radio" name="城市" id="option2"> 曼彻斯特
-												</button>
-												<button class="btn btn-outline-secondary">
-													<input type="radio" name="城市" id="option2"> 利物浦
-												</button>
+								本地图展示伦敦地区最近7天内发布的出售中房源信息, 建议使用个人电脑中的Chrome, Firefox 或 QQ浏览器以获得最佳效果.
+								红色表示首次发布的项目。蓝色表示刚刚降价的项目。圆圈中的数字表示此处房产中的卧室数. 请使用下面的筛选器：
+							</p>
+							<table>
+								<tr>
+									<td>
+										城市
+									</td>
+									<td>
+										<div class="btn-group btn-group-toggle" data-toggle="buttons">
+											<button class="btn btn-outline-secondary p-1" active>
+												<input type="radio" name="城市" id="option1" checked> 伦敦
+											</button>
+											<button class="btn btn-outline-secondary p-1">
+												<input type="radio" name="城市" id="option2"> 曼彻斯特
+											</button>
+											<button class="btn btn-outline-secondary p-1">
+												<input type="radio" name="城市" id="option2"> 利物浦
+											</button>
 
-												<button class="btn btn-outline-secondary">
-													<input type="radio" name="城市" id="option2"> 格拉斯哥
-												</button>
-											</div>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											产权
-										</td>
-										<td>
-											<div class="btn-group btn-group-toggle" data-toggle="buttons">
-												<button class="btn btn-outline-secondary" @click="deleteFilter('freehold')">
-													<input type="radio" name="产权" id="option2"> 全部
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('freehold',true)">
-													<input type="radio" name="产权" id="option1"> 永久
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('freehold',false)">
-													<input type="radio" name="产权" id="option2"> 非永久
-												</button>
+											<button class="btn btn-outline-secondary p-1">
+												<input type="radio" name="城市" id="option2"> 格拉斯哥
+											</button>
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										产权
+									</td>
+									<td>
+										<div class="btn-group btn-group-toggle" data-toggle="buttons">
+											<button class="btn btn-outline-secondary p-1" @click="deleteFilter('freehold')">
+												<input type="radio" name="产权" id="option2"> 全部
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('freehold',true)">
+												<input type="radio" name="产权" id="option1"> 永久
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('freehold',false)">
+												<input type="radio" name="产权" id="option2"> 非永久
+											</button>
 
-											</div>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											建筑
-										</td>
-										<td>
-											<div class="btn-group btn-group-toggle" data-toggle="buttons">
-												<button class="btn btn-outline-secondary" @click="deleteFilter('flat')">
-													<input type="radio" name="发布" id="option2"> 全部
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('flat',true)">
-													<input type="radio" name="建筑" id="option1"> 公寓
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('flat',false)">
-													<input type="radio" name="建筑" id="option2"> 别墅或其它(非公寓)
-												</button>
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										建筑
+									</td>
+									<td>
+										<div class="btn-group btn-group-toggle" data-toggle="buttons">
+											<button class="btn btn-outline-secondary p-1" @click="deleteFilter('flat')">
+												<input type="radio" name="发布" id="option2"> 全部
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('flat',true)">
+												<input type="radio" name="建筑" id="option1"> 公寓
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('flat',false)">
+												<input type="radio" name="建筑" id="option2"> 别墅或其它(非公寓)
+											</button>
 
-											</div>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											发布
-										</td>
-										<td>
-											<div class="btn-group btn-group-toggle" data-toggle="buttons">
-												<button class="btn btn-outline-secondary" @click="deleteFilter('newCome')">
-													<input type="radio" name="发布" id="option2"> 全部
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('newCome',true)">
-													<input type="radio" name="发布" id="option1"> 初次发布
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('newCome',false)">
-													<input type="radio" name="发布" id="option2"> 刚刚降价
-												</button>
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										发布
+									</td>
+									<td>
+										<div class="btn-group btn-group-toggle" data-toggle="buttons">
+											<button class="btn btn-outline-secondary p-1" @click="deleteFilter('newCome')">
+												<input type="radio" name="发布" id="option2"> 全部
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('newCome',true)">
+												<input type="radio" name="发布" id="option1"> 初次发布
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('newCome',false)">
+												<input type="radio" name="发布" id="option2"> 刚刚降价
+											</button>
 
 
-											</div>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											卧室数
-										</td>
-										<td>
-											<div class="btn-group btn-group-toggle" data-toggle="buttons">
-													<button class="btn btn-outline-secondary" @click="deleteFilter('beds')">
-															<input type="radio" name="发布" id="option2"> 全部
-														</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('beds',0)">
-													<input type="radio" name="卧室数" id="option1"> 0间
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('beds',1)">
-													<input type="radio" name="卧室数" id="option2"> 1间
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('beds',2)">
-													<input type="radio" name="卧室数" id="option2"> 2间
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('beds',3)">
-													<input type="radio" name="卧室数" id="option2"> 3间
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('beds',4)">
-													<input type="radio" name="卧室数" id="option2"> 4间
-												</button>
-												<button class="btn btn-outline-secondary" @click="setFilter('beds',5)">
-													<input type="radio" name="卧室数" id="option2"> 5间及以上
-												</button>
-											</div>
-										</td>
-									</tr>
-								</table>
-								<div class="alert alert-success mt-2">共计{{zip.length}}项,本次筛选{{_.filter(zip,filter).length}}</div>
+										</div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										卧室数
+									</td>
+									<td>
+										<div class="btn-group btn-group-toggle" data-toggle="buttons">
+											<button class="btn btn-outline-secondary p-1" @click="deleteFilter('beds')">
+												<input type="radio" name="发布" id="option2"> 全部
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('beds',0)">
+												<input type="radio" name="卧室数" id="option1"> 0间
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('beds',1)">
+												<input type="radio" name="卧室数" id="option2"> 1间
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('beds',2)">
+												<input type="radio" name="卧室数" id="option2"> 2间
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('beds',3)">
+												<input type="radio" name="卧室数" id="option2"> 3间
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('beds',4)">
+												<input type="radio" name="卧室数" id="option2"> 4间
+											</button>
+											<button class="btn btn-outline-secondary p-1" @click="setFilter('beds',5)">
+												<input type="radio" name="卧室数" id="option2"> 5间及以上
+											</button>
+										</div>
+									</td>
+								</tr>
+							</table>
+							<div class="alert alert-success mt-2">共计{{zip.length}}项, 当前筛选结果{{_.filter(zip,filter).length}}项</div>
+							<h3><span class="badge badge-danger">请点击地图上的小圆点查看详情</span></h3>
+
 
 
 						</div>
@@ -355,15 +357,15 @@
 			<div v-if="selectedItem.pics">
 				<img :src="selectedItem.pics[0]" class="img-fluid" />
 			</div>
-			<div class="alert alert-info">
+			<div class="alert alert-info" v-if="selectedItem.price">
 				<p>
 					价格:&pound;{{ selectedItem.price.toLocaleString() }}&nbsp;&nbsp;
-					土地权:{{ selectedItem.tenure }}&nbsp;&nbsp; 登记日期:{{
-					selectedItem.updated.substring(0, 10)
-					}}
-					&nbsp;&nbsp;类型:{{
-					selectedItem.type == "new" ? "新发售" : "降价促销"
-					}}&nbsp;&nbsp;房源编号:{{ selectedItem.id }}
+					卧室数:{{selectedItem.beds}}间&nbsp;&nbsp;
+					房屋类型:{{selectedItem.propertyType}}&nbsp;&nbsp;
+					土地权:{{ selectedItem.tenure }}&nbsp;&nbsp;
+					更新于:{{ selectedItem.updated.substring(0, 10)}}&nbsp;&nbsp;
+					类型:{{selectedItem.type == "new" ? "新发售" : "降价促销" }}&nbsp;&nbsp;
+					英国购房地图网房源编号:{{ selectedItem.id }}
 				</p>
 			</div>
 			<div v-if="selectedItem.kf_cn" class="alert alert-warning">
@@ -846,7 +848,7 @@
 				}, resetMap() {
 					let that = this;
 					let map = new Microsoft.Maps.Map(document.getElementById("myMap"), {
-						center: new Microsoft.Maps.Location(51.50632, -0.12714),
+						center: new Microsoft.Maps.Location(51.511925, -0.058628),
 						mapTypeId: Microsoft.Maps.MapTypeId.road,
 						zoom: 14
 					});
@@ -860,7 +862,7 @@
 						loc = new Microsoft.Maps.Location(lo.lat, lo.lng);
 						pushpin = new Microsoft.Maps.Pushpin(loc, {
 							color: lo.newCome ? "red" : "blue",
-							text: lo.beds.toString()+(lo.beds > 4 ? '+' : ''),
+							text: lo.beds.toString() + (lo.beds > 4 ? '+' : ''),
 							title: "£" + lo.price.toLocaleString()
 						});
 						map.entities.push(pushpin);
@@ -873,16 +875,15 @@
 							infobox.setOptions({
 								location: args.target.getLocation(),
 								description:
-									'<div style="width:300px;height:300px;">£' +
-									lo.price.toLocaleString() +
-									'(点击图片查看详细介绍)<a href="?id=' +
+									'<div >售价£' +
+									lo.price.toLocaleString() + '<br>' + lo.beds + (lo.beds > 4 ? '+' : '') +
+									"卧室," + (lo.flat ? "公寓, " : "别墅, ") + (lo.freehold ? "永久产权" : "非永久产权") + "<br>更新于" + lo.date +
+									'<br><a href="?id=' +
 									lo.id +
-									'"target="_blank"><img class="img-fluid" src="http://222.242.223.77:50080/allset/' +
-									lo.id / 89 +
-									'/00.jpg"/></a>' +
-									lo.beds + (lo.beds > 4 ? '+' : '') +
-									"卧室,"+(lo.flat?"公寓":"别墅")+(lo.freehold?"永久产权":"非永久产权")+"<br>资料更新日期" +lo.date+									
-									"</div>",
+									'"target="_blank"><div class="d-flex" style="height:300px;width:300px;background-size:cover;background-image:url(http://222.242.223.77:50080/allset/'
+									+ (lo.id / 89) +
+									'/00.jpg)"><h2 class="m-auto borderTxt">请点击图片</h2></div></a>'
+									+ "</div>",
 								visible: true,
 								maxHeight: 500,
 								maxWidth: 500
